--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,18 +1,20 @@
 <!doctype html>
 <!--[if IE 9]> <html class="ie9 no-js supports-no-cookies" lang="{{ shop.locale }}"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js supports-no-cookies" lang="{{ shop.locale }}"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="theme-color" content="{{ settings.color_primary }}">
-  <link rel="canonical" href="{{ canonical_url }}">
+<!-- [if (gt IE 9)|!(IE)]><! -->
+<html class="no-js supports-no-cookies" lang="{{ shop.locale }}">
+  <!-- <![endif] -->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="theme-color" content="{{ settings.color_primary }}">
+    <link rel="canonical" href="{{ canonical_url }}">
 
-  {% if settings.favicon != blank %}
-    <link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png">
-  {% endif %}
+    {% if settings.favicon != blank %}
+      <link rel="shortcut icon" href="{{ settings.favicon | image_url: width: 32, height: 32 }}" type="image/png">
+    {% endif %}
 
-  {% capture seo_title %}
+    {% capture seo_title %}
     {{ page_title }}
     {% if current_tags %}
       {%- assign meta_tags = current_tags | join: ', ' %} &ndash; {{ 'general.meta.tags' | t: tags: meta_tags -}}
@@ -22,67 +24,77 @@
     {% endif %}
 
   {% endcapture %}
-  <title>{{ seo_title }}</title>
+    <title>{{ seo_title }}</title>
 
-  {% if page_description %}
-    <meta name="description" content="{{ page_description | escape }}">
-  {% endif %}
+    {% if page_description %}
+      <meta name="description" content="{{ page_description | escape }}">
+    {% endif %}
 
-  {% include 'social-meta-tags' %}
+    {% include 'social-meta-tags' %}
 
-  {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
+    {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
 
-  <script>
-    document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
+    <script>
+      document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
 
-    window.theme = {
-      strings: {
-        addToCart: {{ 'products.product.add_to_cart' | t | json }},
-        soldOut: {{ 'products.product.sold_out' | t | json }},
-        unavailable: {{ 'products.product.unavailable' | t | json }},
+      window.theme = {
+        strings: {
+          addToCart: {{ 'products.product.add_to_cart' | t | json }},
+          soldOut: {{ 'products.product.sold_out' | t | json }},
+          unavailable: {{ 'products.product.unavailable' | t | json }},
+          moneyFormat: {{ shop.money_format | json }},
+          cartSavgings: 'Savings & Discounts: [savings]'
+        },
         moneyFormat: {{ shop.money_format | json }}
-      },
-      moneyFormat: {{ shop.money_format | json }}
-    };
+      };
+    </script>
+
+    {{ content_for_header }}
+
+    <meta name="google-site-verification" content="LS4KaBf47s8mkTfkR3fZNZGdK8tXSvNX7hzh_L1-XqY">
+  </head>
+
+  <body id="{{ page_title | handle }}" class="template-{{ template.name | handle }}">
+    {% section 'header' %}
+
+    <main role="main" id="MainContent">
+      {{ content_for_layout }}
+    </main>
+
+    {% section 'footer' %}
+
+    <a class="in-page-link visually-hidden skip-link" href="#MainContent">
+      {{- 'general.accessibility.skip_to_content' | t -}}
+    </a>
+
+    {% if template.directory == 'customers' %}
+      <!-- [if (gt IE 9)|!(IE)]><! -->
+      <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script>
+      <!-- <![endif] -->
+      <!--[if lte IE 9]> <script src="{{ 'shopify_common.js' | shopify_asset_url }}"></script> <![endif]-->
+    {% endif %}
+
+    <!-- [if (gt IE 9)|!(IE)]><! -->
+    <script src="{{ 'vendor.js' | asset_url }}"></script>
+    <!-- <![endif] -->
+    <!--[if lt IE 9]> <script src="{{ 'vendor.js' | asset_url }}"></script> <![endif]-->
+
+    <!-- [if (gt IE 9)|!(IE)]><! -->
+    <script rel="prefetch" src="{{ 'theme.js' | asset_url }}"></script>
+    <!-- <![endif] -->
+    <!--[if lt IE 9]> <script src="{{ 'theme.js' | asset_url }}"></script> <![endif]-->
+  </body>
+
+  <!-- Yotpo JavaScript -->
+  <script prefetch type="text/javascript">
+    (function e() {
+      var e = document.createElement('script');
+      (e.type = 'text/javascript'),
+        (e.async = true),
+        (e.src = '//staticw2.yotpo.com/VI7R7FuUbFmSWvoxyU8QAN4wXMTXxLFtMIqppl59/widget.js');
+      var t = document.getElementsByTagName('script')[0];
+      t.parentNode.insertBefore(e, t);
+    })();
   </script>
-  
-
-
-  {{ content_for_header }}
-
-  <meta name="google-site-verification" content="LS4KaBf47s8mkTfkR3fZNZGdK8tXSvNX7hzh_L1-XqY" />
- 
-
-</head>
-
-<body id="{{ page_title | handle }}" class="template-{{ template.name | handle }}">
-
-
-  {% section 'header' %}
-
-  <main role="main" id="MainContent">
-    {{ content_for_layout }}
-  </main>
-
-  {% section 'footer' %}
-
-  <a class="in-page-link visually-hidden skip-link" href="#MainContent">{{ 'general.accessibility.skip_to_content' | t }}</a>
-
-  {% if template.directory == 'customers' %}
-    <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script><!--<![endif]-->
-    <!--[if lte IE 9]><script src="{{ 'shopify_common.js' | shopify_asset_url }}"></script><![endif]-->
-  {% endif %}
-
-  <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'vendor.js' | asset_url }}"></script><!--<![endif]-->
-  <!--[if lt IE 9]><script src="{{ 'vendor.js' | asset_url }}"></script><![endif]-->
-
-  <!--[if (gt IE 9)|!(IE)]><!--><script rel="prefetch" src="{{ 'theme.js' | asset_url }}"></script><!--<![endif]-->
-  <!--[if lt IE 9]><script src="{{ 'theme.js' | asset_url }}"></script><![endif]-->
-
-</body> 
-
-<!-- Yotpo JavaScript -->
-  <script prefetch type="text/javascript">(function e(){var e=document.createElement("script");e.type="text/javascript",e.async=true,e.src="//staticw2.yotpo.com/VI7R7FuUbFmSWvoxyU8QAN4wXMTXxLFtMIqppl59/widget.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})();</script>
-<!-- End of Yotpo JavaScript -->  
-
+  <!-- End of Yotpo JavaScript -->
 </html>
